# proxybus

./: README.md  config.py  main.py  modbus.py  modus_server.py  plc_bus.py  plc_exceptions.py  pyproject.toml  requirements.txt  test req.py  utils.py
devices/: base.py  fx1s.py  fx3u.py
