[tool.poetry]
name = "proxybus"
version = "0.1.0"
description = "Proxybus between modbus and diffent plc"
authors = ["Zhukov Ilya <zhukov@deifmo.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pymodbus = "^2.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
